--- a/public/stylesheets/sass/_share_this_image.scss
+++ b/public/stylesheets/sass/_share_this_image.scss
@@ -1,6 +1,6 @@
 textarea.copy_image_code {
     width : 255px;
-    height : 2.5em;
+    height : 2.2em;
     font-size : .8em;
     margin-bottom : 9px;
     overflow : hidden;
