--- a/public/stylesheets/sass/shared_blog_pages.scss
+++ b/public/stylesheets/sass/shared_blog_pages.scss
@@ -1,5 +1,14 @@
+@import "helpers";
+
 div.blog_left_colC h1 {
     margin-left : 10px;
+}
+h1.green a {
+    color : $green;
+}
+h1.green a:hover {
+    text-decoration : none;
+    color : #5d7e29;
 }
 div.blog_left_colC .blog_main_imageC {
     min-height : 249px;
